src/styles/global.css
@import url('https://fonts.googleapis.com/css2?family=Antic+Slab&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap');

@font-face {
    font-family: 'Recoleta';
    src: local('Recoleta SemiBold'), local('Recoleta-SemiBold'),
        url('../assets/fonts/recoleta/Recoleta-SemiBold.woff2') format('woff2'),
        url('../assets/fonts/recoleta/Recoleta-SemiBold.woff') format('woff'),
        url('../assets/fonts/recoleta/Recoleta-SemiBold.ttf') format('truetype');
    font-weight: 600;
    font-style: normal;
}

:root {
    --background-primary: #151515;
    --background-secondary: #202020;
    --background-tertiary: #252525;
    --foreground-primary: #ffffff;
    --foreground-secondary: #cccccc;
    --foreground-tertiary: #757575;
    --accent-primary: #5e81ac;
    --accent-secondary: #ebcb8b;
}

::selection {
    background-color: var(--accent-primary);
    color: var(--foreground-primary);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    -webkit-tap-highlight-color: transparent;
}

html,
body,
#__next {
    overflow-x: hidden;
    min-width: 100vw;
    min-height: 100vh;
    background-color: var(--background-primary);
    color: var(--foreground-primary);
    font-size: 16px;
    font-family: 'Inter', sans-serif;
}

button {
    user-select: none;
}

h1,
h2,
h3,
h4 {
    font-family: 'Recoleta', sans-serif;
    color: var(--foreground-primary);
    line-height: 120%;
    letter-spacing: 0;
}

h1 {
    font-size: 4.5rem;
}

h2 {
    font-size: 2.75rem;
}

p {
    font-size: 1.2rem;
    line-height: 150%;
    color: var(--foreground-secondary);
    font-family: 'Inter', sans-serif;
}

svg {
    fill: none;
    stroke: var(--foreground-primary);
    stroke-width: 1px;
    stroke-linecap: round;
    stroke-linejoin: round;
    width: 24px;
    height: 24px;
}

